--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>2조</h1>
     <ul>
-        <li><a href="1.html">1번 강태영</a></li>
-        <li><a href="2.html">2번 최경훈</a></li>
-        <li><a href="3.html">3번</a></li>
-        <li><a href="4.html">4번</a></li>
+        <li><a href="/1.html">1번 강태영</a></li>
+        <li><a href="/2.html">2번 최경훈</a></li>
+        <li><a href="/3.html">3번</a></li>
+        <li><a href="/4.html">4번</a></li>
     </ul>
 </body>
 </html>
